--- a/AAAMLP/c2.ipynb
+++ b/AAAMLP/c2.ipynb
@@ -3970,7 +3970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3980,35 +3980,242 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "HTTPError",
-     "evalue": "HTTP Error 403: Forbidden",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mHTTPError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/frog/Code/Exercise/AAAMLP/c2.ipynb Cell 93\u001b[0m line \u001b[0;36m4\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y204sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mdatasets\u001b[39;00m \u001b[39mimport\u001b[39;00m fetch_california_housing\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y204sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m# fetch a regression dataset\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y204sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m data \u001b[39m=\u001b[39m fetch_california_housing()\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y204sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m X \u001b[39m=\u001b[39m data[\u001b[39m\"\u001b[39m\u001b[39mdata\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y204sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m col_names \u001b[39m=\u001b[39m data[\u001b[39m\"\u001b[39m\u001b[39mfeature_names\u001b[39m\u001b[39m\"\u001b[39m]\n",
-      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/site-packages/sklearn/datasets/_california_housing.py:138\u001b[0m, in \u001b[0;36mfetch_california_housing\u001b[0;34m(data_home, download_if_missing, return_X_y, as_frame)\u001b[0m\n\u001b[1;32m    132\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mIOError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mData not found and `download_if_missing` is False\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    134\u001b[0m logger\u001b[39m.\u001b[39minfo(\n\u001b[1;32m    135\u001b[0m     \u001b[39m\"\u001b[39m\u001b[39mDownloading Cal. housing from \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m to \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(ARCHIVE\u001b[39m.\u001b[39murl, data_home)\n\u001b[1;32m    136\u001b[0m )\n\u001b[0;32m--> 138\u001b[0m archive_path \u001b[39m=\u001b[39m _fetch_remote(ARCHIVE, dirname\u001b[39m=\u001b[39;49mdata_home)\n\u001b[1;32m    140\u001b[0m \u001b[39mwith\u001b[39;00m tarfile\u001b[39m.\u001b[39mopen(mode\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mr:gz\u001b[39m\u001b[39m\"\u001b[39m, name\u001b[39m=\u001b[39marchive_path) \u001b[39mas\u001b[39;00m f:\n\u001b[1;32m    141\u001b[0m     cal_housing \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mloadtxt(\n\u001b[1;32m    142\u001b[0m         f\u001b[39m.\u001b[39mextractfile(\u001b[39m\"\u001b[39m\u001b[39mCaliforniaHousing/cal_housing.data\u001b[39m\u001b[39m\"\u001b[39m), delimiter\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m,\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    143\u001b[0m     )\n",
-      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/site-packages/sklearn/datasets/_base.py:1324\u001b[0m, in \u001b[0;36m_fetch_remote\u001b[0;34m(remote, dirname)\u001b[0m\n\u001b[1;32m   1302\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Helper function to download a remote dataset into path\u001b[39;00m\n\u001b[1;32m   1303\u001b[0m \n\u001b[1;32m   1304\u001b[0m \u001b[39mFetch a dataset pointed by remote's url, save into path using remote's\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1320\u001b[0m \u001b[39m    Full path of the created file.\u001b[39;00m\n\u001b[1;32m   1321\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   1323\u001b[0m file_path \u001b[39m=\u001b[39m remote\u001b[39m.\u001b[39mfilename \u001b[39mif\u001b[39;00m dirname \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39melse\u001b[39;00m join(dirname, remote\u001b[39m.\u001b[39mfilename)\n\u001b[0;32m-> 1324\u001b[0m urlretrieve(remote\u001b[39m.\u001b[39;49murl, file_path)\n\u001b[1;32m   1325\u001b[0m checksum \u001b[39m=\u001b[39m _sha256(file_path)\n\u001b[1;32m   1326\u001b[0m \u001b[39mif\u001b[39;00m remote\u001b[39m.\u001b[39mchecksum \u001b[39m!=\u001b[39m checksum:\n",
-      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/urllib/request.py:241\u001b[0m, in \u001b[0;36murlretrieve\u001b[0;34m(url, filename, reporthook, data)\u001b[0m\n\u001b[1;32m    224\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    225\u001b[0m \u001b[39mRetrieve a URL into a temporary location on disk.\u001b[39;00m\n\u001b[1;32m    226\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    237\u001b[0m \u001b[39mdata file as well as the resulting HTTPMessage object.\u001b[39;00m\n\u001b[1;32m    238\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    239\u001b[0m url_type, path \u001b[39m=\u001b[39m _splittype(url)\n\u001b[0;32m--> 241\u001b[0m \u001b[39mwith\u001b[39;00m contextlib\u001b[39m.\u001b[39mclosing(urlopen(url, data)) \u001b[39mas\u001b[39;00m fp:\n\u001b[1;32m    242\u001b[0m     headers \u001b[39m=\u001b[39m fp\u001b[39m.\u001b[39minfo()\n\u001b[1;32m    244\u001b[0m     \u001b[39m# Just return the local path and the \"headers\" for file://\u001b[39;00m\n\u001b[1;32m    245\u001b[0m     \u001b[39m# URLs. No sense in performing a copy unless requested.\u001b[39;00m\n",
-      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/urllib/request.py:216\u001b[0m, in \u001b[0;36murlopen\u001b[0;34m(url, data, timeout, cafile, capath, cadefault, context)\u001b[0m\n\u001b[1;32m    214\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    215\u001b[0m     opener \u001b[39m=\u001b[39m _opener\n\u001b[0;32m--> 216\u001b[0m \u001b[39mreturn\u001b[39;00m opener\u001b[39m.\u001b[39;49mopen(url, data, timeout)\n",
-      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/urllib/request.py:525\u001b[0m, in \u001b[0;36mOpenerDirector.open\u001b[0;34m(self, fullurl, data, timeout)\u001b[0m\n\u001b[1;32m    523\u001b[0m \u001b[39mfor\u001b[39;00m processor \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mprocess_response\u001b[39m.\u001b[39mget(protocol, []):\n\u001b[1;32m    524\u001b[0m     meth \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(processor, meth_name)\n\u001b[0;32m--> 525\u001b[0m     response \u001b[39m=\u001b[39m meth(req, response)\n\u001b[1;32m    527\u001b[0m \u001b[39mreturn\u001b[39;00m response\n",
-      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/urllib/request.py:634\u001b[0m, in \u001b[0;36mHTTPErrorProcessor.http_response\u001b[0;34m(self, request, response)\u001b[0m\n\u001b[1;32m    631\u001b[0m \u001b[39m# According to RFC 2616, \"2xx\" code indicates that the client's\u001b[39;00m\n\u001b[1;32m    632\u001b[0m \u001b[39m# request was successfully received, understood, and accepted.\u001b[39;00m\n\u001b[1;32m    633\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39m200\u001b[39m \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m code \u001b[39m<\u001b[39m \u001b[39m300\u001b[39m):\n\u001b[0;32m--> 634\u001b[0m     response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mparent\u001b[39m.\u001b[39;49merror(\n\u001b[1;32m    635\u001b[0m         \u001b[39m'\u001b[39;49m\u001b[39mhttp\u001b[39;49m\u001b[39m'\u001b[39;49m, request, response, code, msg, hdrs)\n\u001b[1;32m    637\u001b[0m \u001b[39mreturn\u001b[39;00m response\n",
-      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/urllib/request.py:563\u001b[0m, in \u001b[0;36mOpenerDirector.error\u001b[0;34m(self, proto, *args)\u001b[0m\n\u001b[1;32m    561\u001b[0m \u001b[39mif\u001b[39;00m http_err:\n\u001b[1;32m    562\u001b[0m     args \u001b[39m=\u001b[39m (\u001b[39mdict\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mdefault\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mhttp_error_default\u001b[39m\u001b[39m'\u001b[39m) \u001b[39m+\u001b[39m orig_args\n\u001b[0;32m--> 563\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_call_chain(\u001b[39m*\u001b[39;49margs)\n",
-      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/urllib/request.py:496\u001b[0m, in \u001b[0;36mOpenerDirector._call_chain\u001b[0;34m(self, chain, kind, meth_name, *args)\u001b[0m\n\u001b[1;32m    494\u001b[0m \u001b[39mfor\u001b[39;00m handler \u001b[39min\u001b[39;00m handlers:\n\u001b[1;32m    495\u001b[0m     func \u001b[39m=\u001b[39m \u001b[39mgetattr\u001b[39m(handler, meth_name)\n\u001b[0;32m--> 496\u001b[0m     result \u001b[39m=\u001b[39m func(\u001b[39m*\u001b[39;49margs)\n\u001b[1;32m    497\u001b[0m     \u001b[39mif\u001b[39;00m result \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    498\u001b[0m         \u001b[39mreturn\u001b[39;00m result\n",
-      "File \u001b[0;32m~/anaconda3/envs/learning_dl/lib/python3.11/urllib/request.py:643\u001b[0m, in \u001b[0;36mHTTPDefaultErrorHandler.http_error_default\u001b[0;34m(self, req, fp, code, msg, hdrs)\u001b[0m\n\u001b[1;32m    642\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mhttp_error_default\u001b[39m(\u001b[39mself\u001b[39m, req, fp, code, msg, hdrs):\n\u001b[0;32m--> 643\u001b[0m     \u001b[39mraise\u001b[39;00m HTTPError(req\u001b[39m.\u001b[39mfull_url, code, msg, hdrs, fp)\n",
-      "\u001b[0;31mHTTPError\u001b[0m: HTTP Error 403: Forbidden"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/frog/scikit_learn_data\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "from sklearn.datasets import fetch_california_housing\n",
+    "from sklearn.datasets._base import _pkl_filepath, get_data_home\n",
+    "\n",
+    "\n",
+    "print(get_data_home())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import os\n",
+    "import tarfile\n",
+    "import joblib\n",
+    "from sklearn.datasets._base import _pkl_filepath, get_data_home\n",
+    "\n",
+    "archive_path = \"cal_housing.tgz\" # change the path if it's not in the current directory\n",
+    "data_home = get_data_home(data_home=None) # change data_home if you are not using ~/scikit_learn_data\n",
+    "if not os.path.exists(data_home):\n",
+    "    os.makedirs(data_home)\n",
+    "filepath = _pkl_filepath(data_home, 'cal_housing.pkz')\n",
+    "\n",
+    "with tarfile.open(mode=\"r:gz\", name=archive_path) as f:\n",
+    "    cal_housing = np.loadtxt(\n",
+    "        f.extractfile('CaliforniaHousing/cal_housing.data'),\n",
+    "        delimiter=',')\n",
+    "    # Columns are not in the same order compared to the previous\n",
+    "    # URL resource on lib.stat.cmu.edu\n",
+    "    columns_index = [8, 7, 2, 3, 4, 5, 6, 1, 0]\n",
+    "    cal_housing = cal_housing[:, columns_index]\n",
+    "\n",
+    "    joblib.dump(cal_housing, filepath, compress=6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>MedInc</th>\n",
+       "      <th>HouseAge</th>\n",
+       "      <th>AveRooms</th>\n",
+       "      <th>AveBedrms</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>AveOccup</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>MedInc_Sqrt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>MedInc</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.119034</td>\n",
+       "      <td>0.326895</td>\n",
+       "      <td>-0.062040</td>\n",
+       "      <td>0.004834</td>\n",
+       "      <td>0.018766</td>\n",
+       "      <td>-0.079809</td>\n",
+       "      <td>-0.015176</td>\n",
+       "      <td>0.984329</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>HouseAge</th>\n",
+       "      <td>-0.119034</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.153277</td>\n",
+       "      <td>-0.077747</td>\n",
+       "      <td>-0.296244</td>\n",
+       "      <td>0.013191</td>\n",
+       "      <td>0.011173</td>\n",
+       "      <td>-0.108197</td>\n",
+       "      <td>-0.132797</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AveRooms</th>\n",
+       "      <td>0.326895</td>\n",
+       "      <td>-0.153277</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.847621</td>\n",
+       "      <td>-0.072213</td>\n",
+       "      <td>-0.004852</td>\n",
+       "      <td>0.106389</td>\n",
+       "      <td>-0.027540</td>\n",
+       "      <td>0.326688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AveBedrms</th>\n",
+       "      <td>-0.062040</td>\n",
+       "      <td>-0.077747</td>\n",
+       "      <td>0.847621</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.066197</td>\n",
+       "      <td>-0.006181</td>\n",
+       "      <td>0.069721</td>\n",
+       "      <td>0.013344</td>\n",
+       "      <td>-0.066910</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Population</th>\n",
+       "      <td>0.004834</td>\n",
+       "      <td>-0.296244</td>\n",
+       "      <td>-0.072213</td>\n",
+       "      <td>-0.066197</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.069863</td>\n",
+       "      <td>-0.108785</td>\n",
+       "      <td>0.099773</td>\n",
+       "      <td>0.018415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AveOccup</th>\n",
+       "      <td>0.018766</td>\n",
+       "      <td>0.013191</td>\n",
+       "      <td>-0.004852</td>\n",
+       "      <td>-0.006181</td>\n",
+       "      <td>0.069863</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.002366</td>\n",
+       "      <td>0.002476</td>\n",
+       "      <td>0.015266</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Latitude</th>\n",
+       "      <td>-0.079809</td>\n",
+       "      <td>0.011173</td>\n",
+       "      <td>0.106389</td>\n",
+       "      <td>0.069721</td>\n",
+       "      <td>-0.108785</td>\n",
+       "      <td>0.002366</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.924664</td>\n",
+       "      <td>-0.084303</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Longitude</th>\n",
+       "      <td>-0.015176</td>\n",
+       "      <td>-0.108197</td>\n",
+       "      <td>-0.027540</td>\n",
+       "      <td>0.013344</td>\n",
+       "      <td>0.099773</td>\n",
+       "      <td>0.002476</td>\n",
+       "      <td>-0.924664</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.015569</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MedInc_Sqrt</th>\n",
+       "      <td>0.984329</td>\n",
+       "      <td>-0.132797</td>\n",
+       "      <td>0.326688</td>\n",
+       "      <td>-0.066910</td>\n",
+       "      <td>0.018415</td>\n",
+       "      <td>0.015266</td>\n",
+       "      <td>-0.084303</td>\n",
+       "      <td>-0.015569</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               MedInc  HouseAge  AveRooms  AveBedrms  Population  AveOccup  \\\n",
+       "MedInc       1.000000 -0.119034  0.326895  -0.062040    0.004834  0.018766   \n",
+       "HouseAge    -0.119034  1.000000 -0.153277  -0.077747   -0.296244  0.013191   \n",
+       "AveRooms     0.326895 -0.153277  1.000000   0.847621   -0.072213 -0.004852   \n",
+       "AveBedrms   -0.062040 -0.077747  0.847621   1.000000   -0.066197 -0.006181   \n",
+       "Population   0.004834 -0.296244 -0.072213  -0.066197    1.000000  0.069863   \n",
+       "AveOccup     0.018766  0.013191 -0.004852  -0.006181    0.069863  1.000000   \n",
+       "Latitude    -0.079809  0.011173  0.106389   0.069721   -0.108785  0.002366   \n",
+       "Longitude   -0.015176 -0.108197 -0.027540   0.013344    0.099773  0.002476   \n",
+       "MedInc_Sqrt  0.984329 -0.132797  0.326688  -0.066910    0.018415  0.015266   \n",
+       "\n",
+       "             Latitude  Longitude  MedInc_Sqrt  \n",
+       "MedInc      -0.079809  -0.015176     0.984329  \n",
+       "HouseAge     0.011173  -0.108197    -0.132797  \n",
+       "AveRooms     0.106389  -0.027540     0.326688  \n",
+       "AveBedrms    0.069721   0.013344    -0.066910  \n",
+       "Population  -0.108785   0.099773     0.018415  \n",
+       "AveOccup     0.002366   0.002476     0.015266  \n",
+       "Latitude     1.000000  -0.924664    -0.084303  \n",
+       "Longitude   -0.924664   1.000000    -0.015569  \n",
+       "MedInc_Sqrt -0.084303  -0.015569     1.000000  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.datasets import fetch_california_housing\n",
+    "\n",
     "# fetch a regression dataset\n",
     "data = fetch_california_housing()\n",
+    "# df = pd.read_csv(\"./CaliforniaHousing/housing.csv\")\n",
     "X = data[\"data\"]\n",
     "col_names = data[\"feature_names\"]\n",
     "y = data[\"target\"]\n",
