--- a/AAAMLP/c2.ipynb
+++ b/AAAMLP/c2.ipynb
@@ -4229,21 +4229,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'y' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/frog/Code/Exercise/AAAMLP/c2.ipynb Cell 94\u001b[0m line \u001b[0;36m7\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y206sZmlsZQ%3D%3D?line=61'>62</a>\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mselection\u001b[39m.\u001b[39mfit_transform(X, y)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y206sZmlsZQ%3D%3D?line=64'>65</a>\u001b[0m ufs \u001b[39m=\u001b[39m UnivariateFeatureSelction(\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y206sZmlsZQ%3D%3D?line=65'>66</a>\u001b[0m     n_features\u001b[39m=\u001b[39m\u001b[39m0.1\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y206sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m     problem_type\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mregression\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y206sZmlsZQ%3D%3D?line=67'>68</a>\u001b[0m     scoring\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mf_regression\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y206sZmlsZQ%3D%3D?line=68'>69</a>\u001b[0m )\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y206sZmlsZQ%3D%3D?line=69'>70</a>\u001b[0m ufs\u001b[39m.\u001b[39mfit(X, y)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/frog/Code/Exercise/AAAMLP/c2.ipynb#Y206sZmlsZQ%3D%3D?line=70'>71</a>\u001b[0m X_transformed \u001b[39m=\u001b[39m ufs\u001b[39m.\u001b[39mtransform(X)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'y' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.feature_selection import chi2\n",
     "from sklearn.feature_selection import f_classif\n",
@@ -4316,6 +4304,224 @@
     ")\n",
     "ufs.fit(X, y)\n",
     "X_transformed = ufs.transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[8.3252],\n",
+       "       [8.3014],\n",
+       "       [7.2574],\n",
+       "       ...,\n",
+       "       [1.7   ],\n",
+       "       [1.8672],\n",
+       "       [2.3886]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_transformed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### greedy feature selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.datasets import make_classification\n",
+    "# generate binary classification data\n",
+    "X, y = make_classification(n_samples=1000, n_features=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "breeak\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn import linear_model\n",
+    "from sklearn import metrics\n",
+    "\n",
+    "class GreedyFeatureSelection:\n",
+    "    \"\"\"\n",
+    "    A simple and custom class for greedy feature selection.\n",
+    "    You will need to modify it quite a bit to make it suitable\n",
+    "    for your dataset.\n",
+    "    \"\"\"\n",
+    "    def evaluate_score(self, X, y):\n",
+    "        \"\"\"\n",
+    "        This function evaluates model on data and returns\n",
+    "        Area Under ROC Curve (AUC)\n",
+    "        NOTE: We fit the data and calculate AUC on same data.\n",
+    "        WE ARE OVERFITTING HERE.\n",
+    "        But this is also a way to achieve greedy selection.\n",
+    "        k-fold will take k times longer.\n",
+    "        If you want to implement it in really correct way,\n",
+    "        calculate OOF AUC and return mean AUC over k folds.\n",
+    "        This requires only a few lines of change and has been\n",
+    "        shown a few times in this book.\n",
+    "        :param X: training data\n",
+    "        :param y: targets\n",
+    "        :return: overfitted area under the roc curve\n",
+    "        \"\"\"\n",
+    "        # fit the logistic regression model,\n",
+    "        # and calculate AUC on same data\n",
+    "        # again: BEWARE\n",
+    "        # you can choose any model that suits your data\n",
+    "        model = linear_model.LogisticRegression()\n",
+    "        model.fit(X, y)\n",
+    "        predictions = model.predict_proba(X)[:, 1]\n",
+    "        auc = metrics.roc_auc_score(y, predictions)\n",
+    "        return auc\n",
+    "    def _feature_selection(self, X, y):\n",
+    "        \"\"\"\n",
+    "        This function does the actual greedy selection\n",
+    "        :param X: data, numpy array\n",
+    "        :param y: targets, numpy array\n",
+    "        :return: (best scores, best features)\n",
+    "        \"\"\"\n",
+    "        # initialize good features list\n",
+    "        # and best scores to keep track of both\n",
+    "        good_features = []\n",
+    "        best_scores = []\n",
+    "        # calculate the number of features\n",
+    "        num_features = X.shape[1]\n",
+    "        # infinite loop\n",
+    "        while True:\n",
+    "            # initialize best feature and score of this loop\n",
+    "            this_feature = None\n",
+    "            best_score = 0\n",
+    "            # loop over all features\n",
+    "            for feature in range(num_features):\n",
+    "                # if feature is already in good features,\n",
+    "                # skip this for loop\n",
+    "                if feature in good_features:\n",
+    "                    continue\n",
+    "                # selected features are all good features till now\n",
+    "                # and current feature\n",
+    "                selected_features = good_features + [feature]\n",
+    "                # remove all other features from data\n",
+    "                xtrain = X[:, selected_features]\n",
+    "                # calculate the score, in our case, AUC\n",
+    "                score = self.evaluate_score(xtrain, y)\n",
+    "                # if score is greater than the best score\n",
+    "                # of this loop, change best score and best feature\n",
+    "                if score > best_score:\n",
+    "                    this_feature = feature\n",
+    "                    best_score = score\n",
+    "            # if we have selected a feature, add it\n",
+    "            # to the good feature list and update best scores list\n",
+    "            if this_feature != None:\n",
+    "                good_features.append(this_feature)\n",
+    "                best_scores.append(best_score)\n",
+    "            # if we didnt improve during the previous round,\n",
+    "            # exit the while loop\n",
+    "            if len(best_scores) > 2:\n",
+    "                if best_scores[-1] < best_scores[-2]:\n",
+    "                    print(\"breeak\")\n",
+    "                    break\n",
+    "        # return best scores and good features\n",
+    "        # why do we remove the last data point?\n",
+    "        return best_scores[:-1], good_features[:-1]\n",
+    "    \n",
+    "    def __call__(self, X, y):\n",
+    "        \"\"\"\n",
+    "        Call function will call the class on a set of arguments\n",
+    "        \"\"\"\n",
+    "        # select features, return scores and selected indices\n",
+    "        scores, features = self._feature_selection(X, y)\n",
+    "        # transform data with selected features\n",
+    "        return X[:, features], scores\n",
+    "\n",
+    "\n",
+    "# transform data by greedy feature selection\n",
+    "X_transformed, scores = GreedyFeatureSelection()(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.9813661366136613,\n",
+       " 0.9853265326532654,\n",
+       " 0.9862266226622664,\n",
+       " 0.9869986998699869,\n",
+       " 0.9875387538753876,\n",
+       " 0.9880668066806679,\n",
+       " 0.9883988398839884,\n",
+       " 0.9886868686868687,\n",
+       " 0.9889908990899089,\n",
+       " 0.9891709170917091,\n",
+       " 0.9892789278927894,\n",
+       " 0.9894269426942693,\n",
+       " 0.9896389638963896,\n",
+       " 0.9898189818981898,\n",
+       " 0.98991899189919,\n",
+       " 0.99011101110111,\n",
+       " 0.9902270227022704,\n",
+       " 0.9903550355035503,\n",
+       " 0.9905590559055906,\n",
+       " 0.9907110711071107,\n",
+       " 0.9908510851085108,\n",
+       " 0.9909830983098311,\n",
+       " 0.9911591159115911,\n",
+       " 0.9913351335133513,\n",
+       " 0.9914471447144715,\n",
+       " 0.9915431543154316,\n",
+       " 0.9916191619161917,\n",
+       " 0.9917471747174718,\n",
+       " 0.9918791879187919,\n",
+       " 0.9919471947194719,\n",
+       " 0.9920752075207521,\n",
+       " 0.9921712171217123,\n",
+       " 0.9922512251225123,\n",
+       " 0.9924192419241924,\n",
+       " 0.9924832483248325,\n",
+       " 0.9926552655265527,\n",
+       " 0.9927152715271528,\n",
+       " 0.9927752775277527,\n",
+       " 0.9928312831283128,\n",
+       " 0.9928752875287529,\n",
+       " 0.9928792879287929]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores"
    ]
   }
  ],
