--- a/AAAMLP/c2.ipynb
+++ b/AAAMLP/c2.ipynb
@@ -4336,7 +4336,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### greedy feature selection"
+    "### greedy feature selection\n",
+    "每次扫一遍所有特征，把贡献最大的加进集合，然后在集合的基础上，再重新扫，每次加进贡献最大的feature。直到无法加进新的"
    ]
   },
   {
@@ -4352,13 +4353,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[] + \"\n",
+      "\" + 28 + \"\n",
+      "\" \n",
+      "[28] + \"\n",
+      "\" + 64 + \"\n",
+      "\" \n",
+      "[28, 64] + \"\n",
+      "\" + 26 + \"\n",
+      "\" \n",
+      "[28, 64, 26] + \"\n",
+      "\" + 72 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72] + \"\n",
+      "\" + 90 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90] + \"\n",
+      "\" + 52 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52] + \"\n",
+      "\" + 54 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54] + \"\n",
+      "\" + 43 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43] + \"\n",
+      "\" + 40 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40] + \"\n",
+      "\" + 65 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65] + \"\n",
+      "\" + 15 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15] + \"\n",
+      "\" + 9 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9] + \"\n",
+      "\" + 60 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60] + \"\n",
+      "\" + 59 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59] + \"\n",
+      "\" + 82 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82] + \"\n",
+      "\" + 77 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77] + \"\n",
+      "\" + 32 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32] + \"\n",
+      "\" + 12 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12] + \"\n",
+      "\" + 95 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95] + \"\n",
+      "\" + 69 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69] + \"\n",
+      "\" + 63 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63] + \"\n",
+      "\" + 85 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85] + \"\n",
+      "\" + 36 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36] + \"\n",
+      "\" + 4 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4] + \"\n",
+      "\" + 42 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42] + \"\n",
+      "\" + 38 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42, 38] + \"\n",
+      "\" + 51 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42, 38, 51] + \"\n",
+      "\" + 86 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42, 38, 51, 86] + \"\n",
+      "\" + 39 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42, 38, 51, 86, 39] + \"\n",
+      "\" + 83 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42, 38, 51, 86, 39, 83] + \"\n",
+      "\" + 75 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42, 38, 51, 86, 39, 83, 75] + \"\n",
+      "\" + 16 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42, 38, 51, 86, 39, 83, 75, 16] + \"\n",
+      "\" + 73 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42, 38, 51, 86, 39, 83, 75, 16, 73] + \"\n",
+      "\" + 34 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42, 38, 51, 86, 39, 83, 75, 16, 73, 34] + \"\n",
+      "\" + 19 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42, 38, 51, 86, 39, 83, 75, 16, 73, 34, 19] + \"\n",
+      "\" + 92 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42, 38, 51, 86, 39, 83, 75, 16, 73, 34, 19, 92] + \"\n",
+      "\" + 0 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42, 38, 51, 86, 39, 83, 75, 16, 73, 34, 19, 92, 0] + \"\n",
+      "\" + 61 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42, 38, 51, 86, 39, 83, 75, 16, 73, 34, 19, 92, 0, 61] + \"\n",
+      "\" + 97 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42, 38, 51, 86, 39, 83, 75, 16, 73, 34, 19, 92, 0, 61, 97] + \"\n",
+      "\" + 21 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42, 38, 51, 86, 39, 83, 75, 16, 73, 34, 19, 92, 0, 61, 97, 21] + \"\n",
+      "\" + 99 + \"\n",
+      "\" \n",
+      "[28, 64, 26, 72, 90, 52, 54, 43, 40, 65, 15, 9, 60, 59, 82, 77, 32, 12, 95, 69, 63, 85, 36, 4, 42, 38, 51, 86, 39, 83, 75, 16, 73, 34, 19, 92, 0, 61, 97, 21, 99] + \"\n",
+      "\" + 30 + \"\n",
+      "\" \n",
       "breeak\n"
      ]
     }
@@ -4438,6 +4565,7 @@
     "            # if we have selected a feature, add it\n",
     "            # to the good feature list and update best scores list\n",
     "            if this_feature != None:\n",
+    "                print(f'{good_features} + \"\\n\" + {this_feature} + \"\\n\" ')\n",
     "                good_features.append(this_feature)\n",
     "                best_scores.append(best_score)\n",
     "            # if we didnt improve during the previous round,\n",
@@ -4466,7 +4594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -4515,7 +4643,7 @@
        " 0.9928792879287929]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
